objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>disco__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Image_Tags__c</fullName>
        <label>Image Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>disco__Image_Type__c</fullName>
        <label>Image Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Mobile_Id__c</fullName>
        <description>mobile Id</description>
        <inlineHelpText>mobile Id</inlineHelpText>
        <label>Mobile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>disco__Probability__c</fullName>
        <label>Probability</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>